--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -404,7 +404,7 @@
   "OtherFluentLanguagesLabel": "Other Fluent Languages",
   "OtherFluentLanguages": "Add another language you speak fluently",
   "NameUsedNativeLanguage": "Name Used Native Language",
-  "AddressInNativeLanguage": "Foreign Address In Native Written Language",
+  "AddressInNativeLanguage": "Foreign Address In Their Written Language",
   "LastAddressLivedTogether": "Last Address Lived Together",
   "AdjustmentOfStatusCity": "City Or Town Where Apply For Adjustment Of Status Of Lawful Permanent Resident",
   "AdjustmentOfStatusState": "State Where Apply For Adjustment Of Status Of Lawful Permanent Resident",
