--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -678,6 +678,8 @@
   "CityOfBirth": "出生城市/镇/村",
   "CountryOfBirth": "出生国家",
   "DateOfBirth": "出生日期（mm/dd/yyyy）",
+  "StateOrProvinceOfBirth": "出生州/省",
+  "CountryOfDomicile": "原国籍",
 
   "Sex": "性别",
 
@@ -749,6 +751,8 @@
   "CountryOfResidence": "居住国家",
   "Parent 2": "父母2的信息",
   "Full Name of Parent 2": "父母2的全名",
+
+  "Yourself": "你自己",
 
   "SponsorCitizenshipOrResidency": "担保人公民身份或永久居留权",
   "SponsorANumber": "担保人ANumber",
