--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -405,6 +405,7 @@
   "OtherFluentLanguages": "Add another language you speak fluently",
   "NameUsedNativeLanguage": "Name Used Native Language",
   "AddressInNativeLanguage": "Foreign Address In Their Native Written Language",
+  "NeverLivedTogether": "If filing for your spouse, provide the last address at which you physically lived together. If you never lived together, select Yes",
   "LastAddressLivedTogether": "Last Address Lived Together",
   "AdjustmentOfStatusCity": "City Or Town Where Apply For Adjustment Of Status Of Lawful Permanent Resident",
   "AdjustmentOfStatusState": "State Where Apply For Adjustment Of Status Of Lawful Permanent Resident",
