--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -401,7 +401,8 @@
   "OtherFluentLanguagesLabel": "其他流利语言",
   "OtherFluentLanguages": "添加另一种你能流利说的语言",
   "NameUsedNativeLanguage": "母语名",
-  "AddressInNativeLanguage": "在母语中的地址。如果从未共同生活，请选择Yes",
+  "AddressInNativeLanguage": "在母语中的地址",
+  "NeverLivedTogether": "若为配偶申请，请指明最近的共同生活过的地址。若从未共同生活，请选择是",
   "LastAddressLivedTogether": "最近在一起生活的地址",
   "AdjustmentOfStatusCity": "申请合法永久居住城市/镇",
   "AdjustmentOfStatusState": "申请合法永久居住州",
