add refine textbox to family-based eligibility part4

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1000,7 +1000,7 @@
   "RelatedToIllicitTrafficker": "Are you the spouse, son, or daughter of a foreign national who illicitly trafficked or aided (or otherwise abetted, assisted, conspired, or colluded) in the illicit trafficking of a controlled substance, such as chemicals, illegal drugs, or narcotics and you obtained, within the last five years, any financial or other benefit from the illegal activity of your spouse or parent, although you knew or reasonably should have known that the financial or other benefit resulted from the illicit activity of your spouse or parent?",
   "EngagedInProstitution": "Have you EVER engaged in prostitution or are you coming to the United States to engage in prostitution?",
   "ProcuredProstitutes": "Have you EVER directly or indirectly procured (or attempted to procure) or imported prostitutes or persons for the purpose of prostitution?",
-  "ReceivedProceedsFromProstitutionNoCheckbox": "Have you EVER received any proceeds or money from prostitution?",
+  "ReceivedProceedsFromProstitution": "Have you EVER received any proceeds or money from prostitution?",
   "IntentToEngageInIllegalGambling": "Do you intend to engage in illegal gambling or any other form of commercialized vice, such as prostitution, bootlegging, or the sale of child pornography, while in the United States?",
   "ExercisedImmunityFromProsecution": "Have you EVER exercised immunity (diplomatic or otherwise) to avoid being prosecuted for a criminal offense in the United States?",
   "ResponsibleForReligiousViolations": "Have you EVER, while serving as a foreign government official, been responsible for or directly carried out violations of religious freedoms?",
@@ -1076,20 +1076,20 @@
   "ExcludedDeportedOrRemoved": "Have you EVER been excluded, deported, or removed from the United States or have you ever departed the United States on your own after having been ordered excluded, deported, or removed from the United States?",
   "EnteredWithoutInspection": "Have you EVER entered the United States without being inspected and admitted or paroled?",
   "UnlawfullyPresentInUS": "Since April 1, 1997, have you been unlawfully present in the United States:",
-  "UnlawfullyPresent180DaysTo1Year": "For more than 180 days but less than a year, and then departed the United States?",
-  "UnlawfullyPresent1YearOrMore": "For one year or more and then departed the United States?",
+  "UnlawfullyPresent180DaysTo1Year": "(a.) For more than 180 days but less than a year, and then departed the United States?",
+  "UnlawfullyPresent1YearOrMore": "(b.) For one year or more and then departed the United States?",
   "NoteOfItem78": "NOTE: You were unlawfully present in the United States if you entered the United States without being inspected and admitted or inspected and paroled, or if you legally entered the United States but you stayed longer than permitted.",
   "ReenterUSWithoutInspection": "Since April 1, 1997, have you EVER reentered or attempted to reenter the United States without being inspected and admitted or paroled after:",
-  "ReenteredAfterUnlawfullyPresent": "Having been unlawfully present in the United States for more than one year in the aggregate?",
-  "ReenteredAfterDeportation": "Having been deported, excluded, or removed from the United States?",
+  "ReenteredAfterUnlawfullyPresent": "(a.) Having been unlawfully present in the United States for more than one year in the aggregate?",
+  "ReenteredAfterDeportation": "(b.) Having been deported, excluded, or removed from the United States?",
   "PlanToPracticePolygamy": "Do you plan to practice polygamy in the United States?",
   "AccompanyingInadmissibleForeignNational": "Are you accompanying another foreign national who requires your protection or guardianship but who is inadmissible after being certified by a medical officer as being helpless from sickness, physical or mental disability, or infancy, as described in INA section 232(c)?",
   "AssistedInWithholdingCustody": "Have you EVER assisted in detaining, retaining, or withholding custody of a U.S. citizen child outside the United States from a U.S. citizen who has been granted custody of the child?",
   "VotedInViolationOfLaw": "Have you EVER voted in violation of any Federal, state, or local constitutional provision, statute, ordinance, or regulation in the United States?",
   "RenouncedCitizenshipToAvoidTax": "Have you EVER renounced U.S. citizenship to avoid being taxed by the United States?",
-  "AppliedForExemptionFromMilitaryService": "Applied for exemption or discharge from training or service in the U.S. armed forces or in the U.S. National Security Training Corps on the ground that you are a foreign national?",
-  "RelievedFromMilitaryService": "Been relieved or discharged from such training or service on the ground that you are a foreign national?",
-  "ConvictedOfDesertion": "Been convicted of desertion from the U.S. armed forces?",
+  "AppliedForExemptionFromMilitaryService": "Have you EVER applied for exemption or discharge from training or service in the U.S. armed forces or in the U.S. National Security Training Corps on the ground that you are a foreign national?",
+  "RelievedFromMilitaryService": "Have you EVER been relieved or discharged from such training or service on the ground that you are a foreign national?",
+  "ConvictedOfDesertion": "Have you EVER been convicted of desertion from the U.S. armed forces?",
   "EvadedMilitaryServiceDuringWar": "Have you EVER left or remained outside the United States to avoid or evade training or service in the U.S. armed forces in time of war or a period declared by the President to be a national emergency?",
   "NationalityOrStatusBeforeEvadingMilitaryService": "what was your nationality or immigration status immediately before you left(for example, U.S. citizen or national, lawful permanent resident, non-immigrant, parolee, present without admission or parole, or any other status)?",
   "Apartment": "Apt",
@@ -1695,6 +1695,7 @@
   "UsedChildSoldiersInCombat": "Have you EVER used any person under 15 years of age to take part in hostilities, or to help or provide services to people in combat?",
   "SubjectToPublicCharge": "Are you subject to the public charge ground of inadmissibility under INA section 212(a)(4)?",
 
+
   "ExplainEspionageOrSabotageIntentItem46a": "If yes, please provide a detailed explanation of your intentions. Your explanation should include specific dates, locations, and any relevant context regarding any espionage (including spying) or sabotage activities you plan to engage in within the United States:",
   "ExplainIntendedExportViolationActivitiesItem46b": "If yes, please provide a detailed explanation of your intentions. Your explanation should include specific dates, locations, and any relevant context regarding activities you plan to engage in within the United States that violate or evade any law prohibiting the export of goods, technology, or sensitive information:",
   "ExplainIntentToOpposeGovernmentItem46c": "If yes, please provide a detailed explanation of your intentions. Your explanation should include specific dates, locations, and any relevant context regarding your involvement in activities aimed at opposing, controlling, or overthrowing the U.S. Government by force, violence, or other unlawful means while in the United States:",
@@ -1727,5 +1728,28 @@
   "ExplainParticipateReligiousBeliefDenial": "If yes, please provide a detailed explanation of your actions. Your explanation should include specific dates, locations, and any relevant context regarding any instance where you ordered, incited, called for, committed, assisted, helped with, or otherwise participated in limiting or denying any person's ability to exercise religious beliefs:",
   "ExplainChildServedArmy": "If yes, please provide a detailed explanation of your actions. Your explanation should include specific dates, locations, and any relevant context regarding your recruitment, enlistment, conscription, or use of any person under 15 years of age to serve in or help an armed force or group:",
   "ExplainUseChildInCombatSupport": "If yes, please provide a detailed explanation of your actions. Your explanation should include specific dates, locations, and any relevant context regarding the use of any person under 15 years of age to take part in hostilities, or to help or provide services to people in combat:",
-  "ExplainPublicChargeGround": "If yes, please provide a detailed explanation of your actions. Your explanation should include specific dates, locations, and any relevant context regarding your subjectivity to the public charge ground of inadmissibility under INA section 212(a)(4):"
+  "ExplainPublicChargeGround": "If yes, please provide a detailed explanation of your actions. Your explanation should include specific dates, locations, and any relevant context regarding your subjectivity to the public charge ground of inadmissibility under INA section 212(a)(4):",
+
+  "ExplainFailedToAttendRemovalProceeding": "If yes, please provide an explanation of the event and circumstances in which you failed or refused to attend or remain in attendance at the removal proceeding filed against you on or after April 1, 1997:",
+  "ExplainBelieveHadReasonableCause": "If yes, please explain your reasonable cause:",
+  "ExplainSubmittedFraudulentDocumentation": "If yes, please provide a detailed explanation of the event and the circumstances surrounding the submission of fraudulent or counterfeit documentation:",
+  "ExplainLiedOrMisrepresentedForImmigrationBenefit": "If yes, please provide a detailed explanation of the incident, including the circumstances surrounding the misrepresentation, concealment, or falsification of information:",
+  "ExplainFalselyClaimedUSCitizenship": "If yes, please provide a detailed explanation of the event and circumstances related to the false claim:",
+  "ExplainBeenAStowaway": "If yes, please provide a detailed and clear explanation of the circumstances and the nature of the stowaway event:",
+  "ExplainKnowinglyEncouragedIllegalEntry": "If yes, please provide a detailed explanation of the event and circumstances related to the illegal smuggling attempt:",
+  "ExplainUnderCivilPenaltyForFraudulentDocuments": "If yes, please provide a detailed explanation of the event and circumstances related to this violation:",
+  "ExplainExcludedDeportedOrRemoved": "If yes, please provide a detailed explanation of the event and the circumstances surrounding the exclusion, deportation, or removal:",
+  "ExplainEnteredWithoutInspection": "If yes, please provide a detailed explanation of the specific event and circumstances surrounding your entry into the United States without inspection or admission:",
+  "ExplainUnlawfullyPresent180DaysTo1Year": "If yes, please provide a detailed explanation of the specific event and circumstances surrounding your unlawful presence:",
+  "ExplainUnlawfullyPresent1YearOrMore": "If yes, please provide a detailed explanation of the specific event and circumstances surrounding your unlawful presence:",
+  "ExplainReenteredAfterUnlawfullyPresent": "If yes, please provide a detailed explanation of the event and circumstances surrounding your unlawful reentry or attempted reentry into the United States after unlawfully present for more than one year in the aggregate:",
+  "ExplainReenteredAfterDeportation": "If yes, please provide a detailed explanation of the event and circumstances related to your reentry or attempted reentry into the United States without being inspected and admitted or paroled, after having been deported, excluded, or removed:",
+  "ExplainPlanToPracticePolygamy": "If yes, please provide an explanation of the event and circumstances related to the practice of polygamy:",
+  "ExplainAccompanyingInadmissibleForeignNational": "If yes, please provide a detailed explanation of the circumstances and events regarding the individual who requires your protection or guardianship due to sickness, physical or mental disability, or infancy, as described in INA section 232(c):",
+  "ExplainAssistedInWithholdingCustody": "If yes, please provide a detailed explanation of the event and circumstances involving the detention, retention, or withholding of custody:",
+  "ExplainVotedInViolationOfLaw": "If yes, please provide a brief explanation of the violation and the circumstances surrounding the event:",
+  "ExplainRenouncedCitizenshipToAvoidTax": "If yes, please provide a concise explanation of the circumstances surrounding the renunciation of U.S. citizenship to avoid U.S. taxation",
+  "ExplainAppliedForExemptionFromMilitaryService": "If yes, please provide a detailed explanation of the circumstances and events surrounding your application for exemption or discharge from U.S. armed forces training or U.S. National Security Training Corps service as a foreign national:",
+  "ExplainRelievedFromMilitaryService": "If yes, please provide a detailed explanation of the event and circumstances related to your discharge or relief from such training or service due to your foreign national status:",
+  "ExplainConvictedOfDesertion": "If yes, please provide a detailed explanation of the desertion event and the surrounding circumstances:"
 }
