add a check box "not married yet"

--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -715,7 +715,8 @@
   "CurrentMaritalStatus": "当前婚姻状况",
   "SingleNeverMarried": "单身，从未结婚",
   "CurrentMarriage": "当前婚姻",
-  "DateOfCurrentMarriage": "当前婚姻日期（如果目前已婚）（mm/dd/yyyy）",
+  "DateOfCurrentMarriage": "当前婚姻日期（mm/dd/yyyy）",
+  "NotMarried": "未婚",
   "PlaceofYourCurrentMarriage(if married)": "当前婚姻地点（如果已婚）",
   "CityorTownOfCurrentMarriage": "城市或镇",
   "CityOfCurrentMarriage": "城市或镇",
