--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -504,11 +504,12 @@
   "mobileTelephoneNumber": "Mobile Telephone Number",
   "faxNumber": "Fax Number",
   "ResidentialAddressInUs": "Residential Address in the U.S.",
-  "Street": "Street",
+  "Street": "Street Number and Name",
   "ApartmentNumber": "Apartment Number",
   "City": "City",
   "State": "State",
   "ZipCode": "Zip Code",
+  "PostalCode": "Postal Code",
   "Province": "Province",
   "TelephoneNumberOfMailingInUs": "Telephone Number of Mailing Address in U.S.",
   "InCareOfName": "Recipient name",
@@ -696,7 +697,6 @@
   "ApartmentNumber(Add check to apt/ste/flr)Flr": "Flr",
   "MailingCityOrTown": "City or Town",
   "MailingState": "State",
-  "MailingZioCode": "ZIP Code",
   "MailingProvince": "Province",
   "MailingPostalCode": "Postal Code",
   "MailingCountry": "Country",
