--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -506,6 +506,7 @@
   "City": "城市",
   "State": "州",
   "ZipCode": "邮政编码",
+  "PostalCode": "邮政编码",
   "Province": "省",
   "TelephoneNumberOfMailingInUs": "美国邮寄地址电话号码",
   "InCareOfName": "收件人姓名",
@@ -690,7 +691,6 @@
   "ApartmentNumber(Add check to apt/ste/flr)Flr": "楼层",
   "MailingCityOrTown": "城市或镇",
   "MailingState": "州",
-  "MailingZioCode": "邮政编码",
   "MailingProvince": "省",
   "MailingPostalCode": "邮政编码",
   "MailingCountry": "国家",
